--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;0,900;1,400;1,700&display=swap" rel="stylesheet">
-        <link href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+        <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
     </head>
 
     <body>
