added google maps link to city :sparkles:

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </header>
             <main>
                 <section class="location">
-                    <div class="location__city"></div>
+                    <a class="location__city" target='_blank'></a>
                     <div class="location__date"></div>
                 </section>
                 <div class="current">
