major search algorthym redesing :zap:

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </header>
             <main>
                 <section class="location">
-                    <a class="location__city" target='_blank'></a>
+                    <a class="location__city" target='_blank' data-id=''></a>
                     <div class="location__date"></div>
                 </section>
                 <div class="current">
