--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
         <link rel="stylesheet" href="./flag-icon-css/css/flag-icon.min.css">
         <link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;0,900;1,400;1,700&display=swap" rel="stylesheet">
-        <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
     </head>
 
     <body>
         <div class="app-wrap">
             <header class="header">
-                <input type="text" autocomplete="off" class="header__search-box" placeholder="Search for a city...">
+                <div class="input-box">
+                    <input type="text" autocomplete="off" class="header__search-box" placeholder="Search for a city...">
+                    <button class="btn" id="geolocate">
+                        <ion-icon name="locate"></ion-icon>
+                    </button>
+                </div>
                 <ul class="suggestions hide">
                 </ul>
             </header>
@@ -40,6 +44,7 @@
             </main>
         </div>
 
+        <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
         <script src="app.js"></script>
     </body>
