added geolocation function :sparkles:

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="app-wrap">
             <header class="header">
                 <div class="input-box">
-                    <input type="text" autocomplete="off" class="header__search-box" placeholder="Search for a city...">
+                    <input type="text" autocomplete="off" class="header__search-box" placeholder="Search for a place...">
                     <button class="btn" id="geolocate">
                         <ion-icon name="locate"></ion-icon>
                     </button>
